<resources>
    <string name="app_name">Gaea</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="phone_text">Enter your mobile number</string>
    <string name="terms_and_conditions">By continuing, you agree to the <u>terms and conditions</u></string>
    <string name="country_code"> +91</string>

    <string name="verify_text">Enter OTP</string>
    <string name="code_sent_text"><u>We have sent an OTP SMS to +91 xxxxx xxxxx</u></string>
    <string name="resend_phone_auth"><u>Resend OTP</u></string>

    <string name="social_media_text">Stay on top of all latest updates from <b>GAEA</b> by connecting with</string>
    <string name="skip_btn"><u>Skip</u></string>

    <string name="facebook_application_id">329245821030706</string>
    <string name="fb_login_protocol_scheme">fb329245821030706</string>

    <string name="question_text">Help us know about you better by answering few questions</string>
</resources>
