<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/initialPhoneView"
        android:visibility="gone">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_food" />

        <TextView
            android:id="@+id/enter_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:paddingBottom="6dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp"
            android:text="@string/phone_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="normal" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phoneGroupView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/phone_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:id="@+id/phone_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal"
            android:layout_below="@+id/phone_number_text"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_code"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingRight="16dp"/>
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType = "phone"
                android:maxLength="10"
                />
        </LinearLayout>
        <Button
            android:id="@+id/send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="Continue"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/verifyGroupView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/verify_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/verify_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:id="@+id/verify_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_sent_text"
                android:textColor="@android:color/black"
                android:paddingRight="16dp"/>
            <!--<EditText-->
            <!--android:id="@+id/verify_code_number"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType = "phone"-->
            <!--android:maxLength="6"-->
            <!--/>-->

            <com.poovam.pinedittextfield.LinePinField
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="16sp"
                android:textSelectHandle="@drawable/text_handle"
                app:noOfFields="6"
                app:distanceInBetween="24dp"
                app:fieldColor="@android:color/black"
                app:highlightColor="@color/colorAccent"
                app:highlightEnabled="true"
                app:lineThickness="2dp"
                app:highlightSingleFieldMode="true"
                app:isCursorEnabled="true"
                app:bottomTextPaddingDp="15dp"
                android:id="@+id/lineField"/>
            <Button
                android:theme="@style/ThemeOverlay.MyDarkButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/buttonResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@android:color/black"
                android:text="@string/resend_phone_auth"/>
        </LinearLayout>
        <!--<Button-->
        <!--android:id="@+id/verify_code"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Verify" />-->
    </LinearLayout>

</LinearLayout>